LibLoading objects with Collision and Touch sensors gives error #35552

Closed
opened 2013-05-28 22:03:11 +02:00 by Daniel Oakey · 5 comments

Category: Physics

%%%"Warning: removing controller with non-zero m_registerCount: 1"

This is what pops up in the console when I lib load an object that has either a touch or a collision sensor attached to a controller. Furthermore, the sensor is deactivated.

To test this, download the 2 blend files. Place these in the same directory. Open the one called empty_scene and press p to start the game engine. You will notice in the console that this error pops up.
%%%

**Category**: Physics %%%"Warning: removing controller with non-zero m_registerCount: 1" This is what pops up in the console when I lib load an object that has either a touch or a collision sensor attached to a controller. Furthermore, the sensor is deactivated. To test this, download the 2 blend files. Place these in the same directory. Open the one called empty_scene and press p to start the game engine. You will notice in the console that this error pops up. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

This issue was referenced by blender/blender-addons-contrib@1a8b17661f

This issue was referenced by blender/blender-addons-contrib@1a8b17661f61efc743f5e311afa8041015ed7dac

This issue was referenced by 1a8b17661f

This issue was referenced by 1a8b17661f61efc743f5e311afa8041015ed7dac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1a8b17661f.

Closed by commit 1a8b17661f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35552
No description provided.