Fix T35552: LibLoading objects with Collision sensors gives an error

The collision sensors were not being properly unregistered from the
physics system before they were merged into the current scene.